# b2b-ecommerce-platform

./: .gitignore  app.py  index.html  main.py  pyproject.toml
src/core/: config.py  database.py  logging_config.py
tests/: run.bat
